--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 node_modules/
 package-lock.json
 package.json
+.firebaserc
 firestore.rules
+database.rules.json
+firebase.json
+firebase-debug.log
